# web3_quant_hackathon_2025

./: .gitignore  README.txt  excange_info.txt
fourier/: Cargo.toml  test.py
fourier/src/: backtest.rs  fourier.rs  indicators.rs  lib.rs  main.rs  order_engine.rs  roostoo.rs  strategy.rs  testing.rs
historical/: readme.txt
