[package]
name = "fourier"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "testing"
path = "src/testing.rs"

[[bin]]
name = "fourier"
path = "src/main.rs"

[dependencies]
binance = {path = "third-party/binance-rs"}
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"  # Add this for hex encoding
dotenv = "0.15.0"
csv = "1.4.0"
anyhow = "1.0.100"
time = "0.3.44"
plotly = "0.13.5"
serde_yaml = "0.9.34"
async-trait = "0.1.89"
num-traits = "0.2.19"

